Added custom SQL script for Docker, interconnected Customer, Tasks and Timer, thus everything is dependent on Customer's existence